--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,136 +1,51 @@
 /**
  * Main styles (fonts, body)
  */
+/* cyrillic-ext */
 @font-face {
-	font-family: 'TT Norms';
-	font-style:  normal;
+	font-family: 'Nunito';
+	font-style: normal;
 	font-weight: 400;
-	src:         local('TT Norms'), url('https://fonts.cdnfonts.com/s/39510/TT Norms Pro Regular.woff') format('woff');
+	src: url(https://fonts.gstatic.com/s/nunito/v25/XRXI3I6Li01BKofiOc5wtlZ2di8HDLshdTk3j77e.woff2) format('woff2');
+	unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
 }
-
+/* cyrillic */
 @font-face {
-	font-family: 'TT Norms';
-	font-style:  italic;
+	font-family: 'Nunito';
+	font-style: normal;
 	font-weight: 400;
-	src:         local('TT Norms'), url('https://fonts.cdnfonts.com/s/39510/TT Norms Pro Italic.woff') format('woff');
+	src: url(https://fonts.gstatic.com/s/nunito/v25/XRXI3I6Li01BKofiOc5wtlZ2di8HDLshdTA3j77e.woff2) format('woff2');
+	unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
-
+/* vietnamese */
 @font-face {
-	font-family: 'TT Norms';
-	font-style:  normal;
-	font-weight: 250;
-	src:         local('TT Norms'), url('https://fonts.cdnfonts.com/s/39510/TT Norms Pro Thin.woff') format('woff');
+	font-family: 'Nunito';
+	font-style: normal;
+	font-weight: 400;
+	src: url(https://fonts.gstatic.com/s/nunito/v25/XRXI3I6Li01BKofiOc5wtlZ2di8HDLshdTs3j77e.woff2) format('woff2');
+	unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
 }
-
+/* latin-ext */
 @font-face {
-	font-family: 'TT Norms';
-	font-style:  italic;
-	font-weight: 250;
-	src:         local('TT Norms Pro'), url('https://fonts.cdnfonts.com/s/39510/TT Norms Pro Thin Italic.woff') format('woff');
+	font-family: 'Nunito';
+	font-style: normal;
+	font-weight: 400;
+	src: url(https://fonts.gstatic.com/s/nunito/v25/XRXI3I6Li01BKofiOc5wtlZ2di8HDLshdTo3j77e.woff2) format('woff2');
+	unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
-
+/* latin */
 @font-face {
-	font-family: 'TT Norms';
-	font-style:  normal;
-	font-weight: 275;
-	src:         local('TT Norms'), url('https://fonts.cdnfonts.com/s/39510/TT Norms Pro ExtraLight.woff') format('woff');
-}
-
-@font-face {
-	font-family: 'TT Norms';
-	font-style:  italic;
-	font-weight: 275;
-	src:         local('TT Norms'), url('https://fonts.cdnfonts.com/s/39510/TT Norms Pro ExtraLight Italic.woff') format('woff');
-}
-
-@font-face {
-	font-family: 'TT Norms';
-	font-style:  normal;
-	font-weight: 300;
-	src:         local('TT Norms'), url('https://fonts.cdnfonts.com/s/39510/TT Norms Pro Light.woff') format('woff');
-}
-
-@font-face {
-	font-family: 'TT Norms';
-	font-style:  italic;
-	font-weight: 300;
-	src:         local('TT Norms '), url('https://fonts.cdnfonts.com/s/39510/TT Norms Pro Light Italic.woff') format('woff');
-}
-
-@font-face {
-	font-family: 'TT Norms';
-	font-style:  normal;
-	font-weight: 500;
-	src:         local('TT Norms'), url('https://fonts.cdnfonts.com/s/39510/TT Norms Pro Medium.woff') format('woff');
-}
-
-@font-face {
-	font-family: 'TT Norms';
-	font-style:  italic;
-	font-weight: 500;
-	src:         local('TT Norms'), url('https://fonts.cdnfonts.com/s/39510/TT Norms Pro Medium Italic.woff') format('woff');
-}
-
-@font-face {
-	font-family: 'TT Norms';
-	font-style:  normal;
-	font-weight: 700;
-	src:         local('TT Norms'), url('https://fonts.cdnfonts.com/s/39510/TT Norms Pro Bold.woff') format('woff');
-}
-
-@font-face {
-	font-family: 'TT Norms';
-	font-style:  italic;
-	font-weight: 700;
-	src:         local('TT Norms'), url('https://fonts.cdnfonts.com/s/39510/TT Norms Pro Bold Italic.woff') format('woff');
-}
-
-@font-face {
-	font-family: 'TT Norms';
-	font-style:  normal;
-	font-weight: 800;
-	src:         local('TT Norms'), url('https://fonts.cdnfonts.com/s/39510/TT Norms Pro ExtraBold.woff') format('woff');
-}
-
-@font-face {
-	font-family: 'TT Norms';
-	font-style:  italic;
-	font-weight: 800;
-	src:         local('TT Norms'), url('https://fonts.cdnfonts.com/s/39510/TT Norms Pro ExtraBold Italic.woff') format('woff');
-}
-
-@font-face {
-	font-family: 'TT Norms';
-	font-style:  normal;
-	font-weight: 900;
-	src:         local('TT Norms'), url('https://fonts.cdnfonts.com/s/39510/TT Norms Pro Black.woff') format('woff');
-}
-
-@font-face {
-	font-family: 'TT Norms';
-	font-style:  italic;
-	font-weight: 900;
-	src:         local('TT Norms'), url('https://fonts.cdnfonts.com/s/39510/TT Norms Pro Black Italic.woff') format('woff');
-}
-
-@font-face {
-	font-family: 'TT Norms';
-	font-style:  normal;
-	font-weight: 1000;
-	src:         local('TT Norms'), url('https://fonts.cdnfonts.com/s/39510/TT Norms Pro ExtraBlack.woff') format('woff');
-}
-
-@font-face {
-	font-family: 'TT Norms';
-	font-style:  italic;
-	font-weight: 1000;
-	src:         local('TT Norms'), url('https://fonts.cdnfonts.com/s/39510/TT Norms Pro ExtraBlack Italic.woff') format('woff');
+	font-family: 'Nunito';
+	font-style: normal;
+	font-weight: 400;
+	src: url(https://fonts.gstatic.com/s/nunito/v25/XRXI3I6Li01BKofiOc5wtlZ2di8HDLshdTQ3jw.woff2) format('woff2');
+	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 body {
 	background:              #110c26;
 	align-content:           center;
-	font-family:             'TT Norms', serif;
+	font-family:             'Nunito', serif;
 	-webkit-font-smoothing:  antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	text-align:              center;
